--- a/agent/config.example.json
+++ b/agent/config.example.json
@@ -1,5 +1,6 @@
 {
   "device_id": "demo-001",
   "server_url": "http://127.0.0.1:8000/ingest",
-  "interval_sec": 10
+  "interval_sec": 10,
+  "auth_token": "change-me"
 }
