--- a/agent/config.json
+++ b/agent/config.json
@@ -1,6 +1,6 @@
 {
   "device_id": "local-test-001",
   "server_url": "http://127.0.0.1:8000/ingest",
-  "interval_sec": 5
+  "interval_sec": 5,
+  "auth_token": "dev-token-123"
 }
-
