--- a/agent/config.json
+++ b/agent/config.json
@@ -2,5 +2,5 @@
   "device_id": "local-test-001",
   "server_url": "http://127.0.0.1:8000/ingest",
   "interval_sec": 5,
-  "auth_token": "orgb-d259ce15c6e137a0123227da3cd6f35e"
+  "auth_token": "dev-token-123"
 }
